--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script>
       // Use your own connect token API endpoint, this one only list sandbox connectors
       // Example Reference: https://github.com/pluggyai/quickstart/tree/master/examples/vercel-node-connect-token
-      fetch('https://my-own-api.vercel.app/api/token', {
+      fetch('https://mentorjoao.github.io/Pluggy/token.ts', {
         method: "POST",
         headers: {
           Accept: "application/json",
