--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script>
       const { PluggyConnect } = window;
 
-      fetch('https://mentorjoao.github.io/Pluggy/api/token', {
+      fetch('https://mentorjoao.github.io/Pluggy/token.ts', {
         method: "POST",
         headers: {
           Accept: "application/json",
